cks/networkpolicy/1-networkpolicy-deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 1-network-policy-deny-all
  namespace: 4labs
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
