cks/networkpolicy/3-networkpolicy-frontend-memcached.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 3-egress-frontend-to-memcached1
  namespace: 4labs
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: memcached1
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 3-ingress-memcached1-from-frontend
  namespace: 4labs
spec:
  podSelector:
    matchLabels:
      app: memcached1
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 3-egress-frontend-to-memcached2
  namespace: 4labs
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: memcached2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 3-ingress-memcached2-from-frontend
  namespace: 4labs
spec:
  podSelector:
    matchLabels:
      app: memcached2
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
