cks/networkpolicy/6-networkpolicy-egress-ip-block.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 6-allow-internet-to-egress
  namespace: 4labs
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector: {}
  - to:
    - ipBlock:
        cidr: '0.0.0.0/0'
