cks/networkpolicy/7-networkpolicy-ingress-ip-block.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 7-allow-http-from-ingress
  namespace: 4labs
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
  - from:
    - ipBlock:
        cidr: '0.0.0.0/0'
        except:
        - 10.0.0.0/8
    ports:
      - port: 8080
