cks/networkpolicy/8-networkpolicy-metadata-deny.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 8-metadata-deny
  namespace: 4labs
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: '0.0.0.0/0'
        except:
        - 169.254.169.254/32
